--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,6 @@
 
 name: Node.js CI
 
-
 on:
   push:
     branches: [ main ]
@@ -19,7 +18,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x, 16.x]
         
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
